--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,7 +1,7 @@
 /* CSS (Custom Styles) */
 body {
   margin: 0;
-  font-family: sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .sticky-top {
@@ -9,6 +9,9 @@ body {
   top: 0;
   z-index: 100;
 }
+
+
+
 
 .custom-divider {
   border-top: 1px solid #fff;
@@ -32,6 +35,7 @@ body {
   color: #fff;
 }
 
+
 .coding-divider::before,
 .coding-divider::after {
   content: '';
@@ -49,9 +53,54 @@ body {
   margin-left: 10px;
 }
 
+.coding-divider1 i {
+  color: white;
+  margin-top: 15px;
+}
+
+.coding-divider1 {
+  text-align: center;
+  margin: 20px 0;
+  font-size: 24px;
+  color: #fff;
+  margin-top: 15px;
+}
+
+.job-position {
+  margin-top: 70px;
+}
+
+.coding-divider1::before,
+.coding-divider1::after {
+  content: '';
+  display: inline-block;
+  width: 20%;
+  height: 4px;
+  background-color: #fff;
+}
+
+.coding-divider1::before {
+  margin-right: 10px;
+}
+
+.coding-divider1::after {
+  margin-left: 10px;
+}
+
+.clickable-image:hover {
+  transform: scale(1.05); /* Increase the size slightly on hover */
+  transition: transform 0.2s; /* Add a smooth transition effect */
+  cursor: pointer; /* Change the cursor to a pointer hand */
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Add a subtle shadow on hover */
+}
+
 .card {
   border: none;
   background-color: #7E8D85;
+}
+
+.card-body a {
+  color: black;
 }
 
 #projects {
@@ -70,10 +119,27 @@ body {
 .btn-custom {
   background-color: #7E8D85; /* Set the background color to #7E8D85 */
   color: #fff; /* Set the text color to white */
-  border-color: #7E8D85; /* Set the border color to #7E8D85 */
+  border-color: #000000; /* Set the border color to #7E8D85 */
 }
 
 .btn-custom:hover {
   background-color: #6C7A70; /* Change the background color on hover to a slightly darker shade */
   border-color: #6C7A70; /* Change the border color on hover to a slightly darker shade */
+}
+
+#skills {
+  background-color: #7E8D85;
+}
+
+#skills h1 {
+  color: white;
+}
+
+.navbar-toggler {
+  background-color: #7E8D85;
+}
+
+.navbar-collapse {
+  display: flex;
+  justify-content: end;
 }
